--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint": "^5.13.0",
     "firebase": "^5.8.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.7.0",
@@ -25,11 +26,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.13.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-import": "^2.16.0"
   }
 }
